# solana-idlgen

./: .gitignore  Cargo.toml  readme.md
src/: idl_types.rs  lib.rs
tests/: Cargo.toml
tests/src/: lib.rs  main.rs
