[package]
name = "idl_to_program"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
proc-macro2 = "1.0.56"
quote = { version = "1.0.26", features = ["proc-macro"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
syn = "2.0.15"
solana-sdk = "1.15.2"